apps/cilium/templates/gateway/private-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: private-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: web-http
    protocol: HTTP
    port: 80
    hostname: '*.mobrockers.com'
  # - name: web-https
  #   protocol: HTTPS
  #   port: 443
  #   hostname: '*.mobrockers.com'
  #   tls:
  #     mode: Terminate
  #       certificateRefs:
  # - name: ldaps
  #   protocol: TLS
  #   port: 636
  #   hostname: 'ldap.mobrockers.com'
  #   allowedRoutes:
  #     namespaces:
  #       from: Selector
  #     - authentik
  #     kinds:
  #   tls:
  #     mode: Terminate
  #       certificateRefs:
  #       - kind: Secret
  #         group: ""
  #         name: wildcard-example-com-cert
  #         namespace: gateway-api-example-ns2
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: tls-upgrade
# spec:
#   parentRefs:
#   - name: private-gateway
#     sectionName: web-http
#   hostnames:
#   - '*.mobrockers.com'
#   rules:
#   - filters:
#     - type: RequestRedirect
#       requestRedirect:
#         scheme: https
#         port: 443
